# multi_monitor

./: .gitignore  README.md  config.py  config.yaml  logger.py  main.py  monitor_screen.py  mouse.py  multi_monitor.py  pyproject.toml  requirements.txt  requirements_src.txt
src/: application.py  config.py  i_logger.py  i_notification.py  logger.py  main.py  mouse.py  notification.py
